# cocel_lidar

./: README.md
src/: CMakeCache.txt  Makefile  cmake_install.cmake  genNwrite  read
src/01_downsampling/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  uniform  voxel
src/01_downsampling/src/: uniformsampling.cpp  voxelization.cpp
src/01_filter/: CMakeCache.txt  CMakeLists.txt  Makefile  Radius_Outlier_Removal_Neg.pcd  cmake_install.cmake  radius  stats
src/01_filter/src/: radius.cpp  stats.cpp
src/01_io/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/01_io/src/: convert.cpp  genNwrite.cpp  read.cpp
src/01_roi/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  conditional  passthrough
src/01_roi/src/: conditional.cpp  passthrough.cpp
src/02_RANSAC/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/02_RANSAC/atomic_configure/: setup.sh
src/02_RANSAC/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/02_RANSAC/catkin_generated/installspace/: 02_RANSAC.pc  02_RANSACConfig.cmake
src/02_RANSAC/catkin_generated/stamps/02_RANSAC/: package.xml.stamp
src/02_RANSAC/devel/: .catkin  .rosinstall  local_setup.sh
src/02_RANSAC/devel/lib/pkgconfig/: 02_RANSAC.pc
src/02_RANSAC/devel/share/02_RANSAC/cmake/: 02_RANSACConfig.cmake
src/02_RANSAC/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/02_RANSAC/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/02_RANSAC/gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile
src/02_RANSAC/src/: RANSAC.cpp  RANSAC_test.cpp
src/02_clustering/: CMakeCache.txt  CMakeLists.txt  Makefile  cloud_cluster_1.pcd  cloud_cluster_2.pcd  cloud_cluster_3.pcd  cloud_cluster_4.pcd  cloud_cluster_5.pcd  cloud_cluster_6.pcd  cmake_install.cmake  euclidean
src/02_clustering/src/: conditional_euclidean.cpp  euclidean.cpp
src/TL_beginner_tutorials/: CMakeLists.txt  package.xml
src/TL_beginner_tutorials/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
src/TL_foobar/: CMakeLists.txt  package.xml
src/TL_pcl_cpp_tutorial/: CMakeLists.txt  package.xml
src/TL_pcl_cpp_tutorial/src/: example.cpp
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/src/: listener.cpp  talker.cpp
src/pcl_cpp_tutorial/: CMakeLists.txt  package.xml
